--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ font-style: bold;
 
 
 .main h1 {
-    margin-left: 72px;
+    margin-left: 172px;
     margin-top: 200px;
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -51,12 +51,12 @@ font-style: bold;
 h2 {
     font-size: 45PX;
     color: white;
-    margin-left: 80px;
+    margin-left: 180px;
     margin-top: 0px;
     
 }
 h3 {
-    margin-left: 80px;
+    margin-left: 180px;
     margin-top: 1px;
     color: white;
     column-width: 15cm;
@@ -64,26 +64,38 @@ h3 {
     font-size: 20px;
 }
 .btn {
-    margin-left: 72px;
+    margin-left: 172px;
     background-color: transparent;
     color: #87A1FD;
     border: 1px solid #87A1FD;
     border-radius: 15px;
 }
-.social-links {
-    margin-top: 40px;
-    display: flex;
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #0A192F;
+    color: white;
+    text-align: center;
   }
-  .social-links a {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #0A192F;
-    color: #fff;
-    line-height: 1;
-    margin-right: 20px;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+  .footer p{
+      margin-left: 1000px;
+      display: flex;
+      margin-bottom: 0px;
+  }
+  .icon-bar {
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  .icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
   }
